output alignment and timeToRun fix

--- a/Frontend/src/CodeForm.css
+++ b/Frontend/src/CodeForm.css
@@ -57,8 +57,7 @@
     float: left;
     margin: 5%;
     overflow-wrap: inherit;
-    max-height: 50px;
-    max-width: 20%;
+    max-width: 150px;
 }
 
 .output_div span
@@ -66,6 +65,7 @@
     text-align: center;
     display: block;
     margin-top: 10%;
+    max-width: 60px;
 }
 
 .logo
